--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -31,18 +31,14 @@
 
   /* gradient color */
 
-  --loading-text-gradient: linear-gradient(
-    90deg,
-    transparent 0% 16.66%,
-    var(--smoky-black-3) 33.33% 50%,
-    transparent 66.66% 75%
-  );
-  --gradient-1: linear-gradient(
-    to top,
-    hsla(0, 0%, 0%, 0.9),
-    hsla(0, 0%, 0%, 0.7),
-    transparent
-  );
+  --loading-text-gradient: linear-gradient(90deg,
+      transparent 0% 16.66%,
+      var(--smoky-black-3) 33.33% 50%,
+      transparent 66.66% 75%);
+  --gradient-1: linear-gradient(to top,
+      hsla(0, 0%, 0%, 0.9),
+      hsla(0, 0%, 0%, 0.7),
+      transparent);
 
   /* typography */
 
@@ -166,6 +162,7 @@ html {
   font-size: 10px;
   scroll-behavior: smooth;
 }
+
 body {
   background-color: var(--eerie-black-1);
   color: var(--white);
@@ -222,6 +219,7 @@ body .nav-active {
 .headline-1 {
   font-size: var(--fontSize-headline-1);
 }
+
 .headline-2 {
   font-size: var(--fontSize-headline-2);
   line-height: var(--lineHeight-6);
@@ -230,12 +228,15 @@ body .nav-active {
 .title-1 {
   font-size: var(--fontSize-title-1);
 }
+
 .title-2 {
   font-size: var(--fontSize-title-2);
 }
+
 .title-3 {
   font-size: var(--fontSize-title-3);
 }
+
 .title-4 {
   font-size: var(--fontSize-title-4);
 }
@@ -253,6 +254,7 @@ body .nav-active {
 .body-3 {
   font-size: var(--fontSize-body-3);
 }
+
 .body-4 {
   font-size: var(--fontSize-body-4);
 }
@@ -263,6 +265,7 @@ body .nav-active {
   line-height: var(--lineHeight-3);
   letter-spacing: var(--letterSpacing-1); */
 }
+
 .label-2 {
   font-size: var(--fontSize-label-2);
   /* font-weight: var(--weight-bold);
@@ -276,6 +279,7 @@ body .nav-active {
 .container {
   padding-inline: 16px;
 }
+
 .separator {
   width: 8px;
   height: 8px;
@@ -286,6 +290,7 @@ body .nav-active {
 .contact-lable {
   font-weight: var(--weight-bold);
 }
+
 .contact-number {
   color: var(--gold-crayola);
   max-width: max-content;
@@ -314,6 +319,7 @@ body .nav-active {
   transform: scaleX(1);
   opacity: 1;
 }
+
 .contact-number::after {
   bottom: -5px;
 }
@@ -394,6 +400,7 @@ body .nav-active {
 .btn:is(:hover, :focus-visible) .text-1 {
   transform: translateY(-40px);
 }
+
 .btn:is(:hover, :focus-visible) .text-2 {
   top: 50%;
   transform: translate(-50%, -50%);
@@ -403,6 +410,7 @@ body .nav-active {
   background-color: var(--gold-crayola);
   color: var(--black);
 }
+
 .btn-secondary::before {
   background-color: var(--smoky-black-1);
 }
@@ -493,13 +501,16 @@ body .nav-active {
 .move-anim {
   animation: move 10s linear infinite;
 }
+
 @keyframes move {
   0% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(100%);
   }
+
   100% {
     transform: translateY(0);
   }
@@ -525,19 +536,23 @@ body .nav-active {
 .input-field::placeholder {
   color: var(--white-alpha-20);
 }
+
 .input-field:focus {
   border-color: var(--gold-crayola);
 }
+
 .icon-wrapper {
   position: relative;
   margin-block-end: 20px;
 }
+
 .icon-wrapper .input-field {
   margin-block-end: 0;
   padding-inline-start: 40px;
   appearance: none;
   cursor: pointer;
 }
+
 .icon-wrapper ion-icon {
   position: absolute;
   top: 50%;
@@ -546,9 +561,11 @@ body .nav-active {
   --ionicon-stroke-width: 50px;
   pointer-events: none;
 }
+
 .icon-wrapper ion-icon:first-child {
   left: 15px;
 }
+
 .icon-wrapper ion-icon:last-child {
   right: 15px;
 }
@@ -571,11 +588,11 @@ body .nav-active {
   transition: var(--transition-2);
 }
 
-.preload > * {
+.preload>* {
   transition: var(--transition-1);
 }
 
-.preload.loaded > * {
+.preload.loaded>* {
   opacity: 0;
 }
 
@@ -583,6 +600,7 @@ body .nav-active {
   transition-delay: 250ms;
   transform: translateY(100%);
 }
+
 .circle {
   width: 112px;
   height: 112px;
@@ -597,6 +615,7 @@ body .nav-active {
   0% {
     transform: rotate(0);
   }
+
   100% {
     transform: rotate(1turn);
   }
@@ -622,6 +641,7 @@ body .nav-active {
   0% {
     background-position: 100%;
   }
+
   100% {
     background-position: 0%;
   }
@@ -642,6 +662,7 @@ body .nav-active {
 .header .btn {
   display: none;
 }
+
 .header {
   position: fixed;
   top: 0;
@@ -691,6 +712,7 @@ body .nav-active {
   0% {
     transform: scaleX(1);
   }
+
   100% {
     transform: scaleX(0.8);
   }
@@ -699,6 +721,7 @@ body .nav-active {
 .nav-open-btn .line-2 {
   animation-delay: 150ms;
 }
+
 .nav-open-btn .line-3 {
   animation-delay: 300ms;
 }
@@ -961,6 +984,7 @@ body .nav-active {
     transform: translateY(30px);
     opacity: 0;
   }
+
   100% {
     transform: translateY(0);
     opacity: 1;
@@ -970,12 +994,15 @@ body .nav-active {
 .hero .slider-item.active .section-subtitle {
   animation-delay: 400ms;
 }
+
 .hero .slider-item.active .hero-title {
   animation-delay: 600ms;
 }
+
 .hero .slider-item.active .hero-text {
   animation-delay: 800ms;
 }
+
 .hero .slider-item.active .btn {
   animation-delay: 1s;
 }
@@ -1073,7 +1100,7 @@ body .nav-active {
   margin-block-end: 120px;
 }
 
-.about-banner > .w-100 {
+.about-banner>.w-100 {
   padding-inline-start: 50px;
 }
 
@@ -1291,9 +1318,11 @@ body .nav-active {
 .reservation-form {
   margin-block-start: -270px;
 }
+
 .form-text {
   margin-block-end: 40px;
 }
+
 .form-text .link {
   display: inline;
   color: var(--gold-crayola);
@@ -1302,19 +1331,24 @@ body .nav-active {
 .form-right .headline-1 {
   margin-block-end: 40px;
 }
+
 .form-right .contact-label {
   margin-block-end: 5px;
 }
+
 .form-right .separator {
   margin: 20px auto;
 }
+
 .form-right .body-4 {
   color: var(--quick-silver);
   line-height: var(--lineHeight-3);
 }
+
 .form-right .body-4:not(:last-child) {
   margin-block-end: 25px;
 }
+
 .form-left,
 .form-right {
   padding: 40px 20px 30px;
@@ -1324,6 +1358,7 @@ body .nav-active {
   text-transform: uppercase;
   padding-inline-end: 10px;
 }
+
 .input-field[type="date"]::-webkit-calendar-picker-indicator {
   opacity: 0;
 }
@@ -1339,6 +1374,7 @@ textarea.input-field {
   max-width: 100%;
   width: 100%;
 }
+
 .form-right {
   background-repeat: repeat;
   background-position: top left;
@@ -1359,20 +1395,25 @@ textarea.input-field {
 .feature-item:nth-child(2n + 1) .feature-card {
   background-color: var(--eerie-black-3-black-3);
 }
+
 .feature-item:nth-child(2n) .feature-card {
   background-color: var(--smoky-black-3);
 }
+
 .feature-card .card-icon {
   max-width: max-content;
   margin-inline: auto;
   transition: var(--transition-2);
 }
+
 .feature-card:hover .card-icon {
   transform: scale(-1) rotate(180deg);
 }
+
 .feature-card .card-title {
   margin-block: 20px;
 }
+
 .feature-card .card-text {
   color: var(--quick-silver);
   line-height: var(--lineHeight-6);
@@ -1507,6 +1548,7 @@ textarea.input-field {
 .footer-brand .icon-wrapper .input-field {
   cursor: text;
 }
+
 .footer-brand .btn {
   min-width: 100%;
 }
@@ -1558,6 +1600,7 @@ textarea.input-field {
   background-color: var(--white);
   color: var(--gold-crayola);
 }
+
 .back-top-btn.active {
   opacity: 1;
   visibility: visible;
@@ -1632,6 +1675,7 @@ textarea.input-field {
   .topbar-item .span {
     font-size: var(--fontSize-label-1);
   }
+
   .topbar .link {
     transition: var(--transition-1);
   }
@@ -1645,9 +1689,11 @@ textarea.input-field {
   .header {
     top: 51px;
   }
+
   .header.active {
     top: 0;
   }
+
   .header .btn {
     display: block;
     margin-inline-start: auto;
@@ -1669,12 +1715,14 @@ textarea.input-field {
     gap: 80px;
   }
 
-  .about-banner > .w-100 {
+  .about-banner>.w-100 {
     padding-inline-start: 90px;
   }
+
   .about .abs-img-1 {
     width: 285px;
   }
+
   .about .contact-number {
     --fontSize-body-1: 2.5rem;
   }
@@ -1686,7 +1734,7 @@ textarea.input-field {
   }
 
   /* footer */
-  .footer-brand > * {
+  .footer-brand>* {
     max-width: 460px;
     margin-inline: auto;
   }
@@ -1717,6 +1765,7 @@ textarea.input-field {
   .grid-list {
     grid-template-columns: 1fr, 1fr;
   }
+
   :is(.service, .event) .container {
     max-width: 820px;
   }
@@ -1788,6 +1837,7 @@ textarea.input-field {
 /* responsive for large than 992px screen */
 
 @media (min-width: 992px) {
+
   /* custom property */
   :root {
     /* spacing */
@@ -1798,9 +1848,11 @@ textarea.input-field {
   :is(.service, .evnet) .container {
     max-width: unset;
   }
+
   :is(.service, .event) .grid-list {
     grid-template-columns: repeat(3, 1fr);
   }
+
   :is(.service, .event) .grid-list li:last-child {
     grid-column: auto;
     width: 100%;
@@ -1810,6 +1862,7 @@ textarea.input-field {
   .topbar-item:not(.link) {
     display: flex;
   }
+
   .topbar .item-2 {
     margin-inline-end: auto;
   }
@@ -1848,6 +1901,7 @@ textarea.input-field {
   .special-dish-content {
     padding-inline: 50px 25px;
   }
+
   .sepecial-dish-content .container {
     position: relative;
   }
@@ -1860,6 +1914,7 @@ textarea.input-field {
   .special-dish-content .wrapper {
     justify-content: flex-start;
   }
+
   .special-dish .abs-img {
     position: absolute;
     top: 10px;
@@ -1916,6 +1971,7 @@ textarea.input-field {
 /* responsive for large than 1200px screen */
 
 @media (min-width: 1200px) {
+
   /* custom property */
   :root {
     --fontSize-title-2: 2.5rem;
@@ -1933,6 +1989,7 @@ textarea.input-field {
   .topbar .container {
     max-width: unset;
   }
+
   .topbar .separator {
     display: block;
   }
@@ -1940,7 +1997,7 @@ textarea.input-field {
   /* header */
 
   .nav-open-btn,
-  .navbar > *:not(.navbar-list),
+  .navbar>*:not(.navbar-list),
   .header .overlay {
     display: none;
   }
